monitoring/grafana/base/default-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: treafik-default-headers
  namespace: traefik
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
