monitoring/grafana/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard
  namespace: grafana
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.yourdomain.com`)
      kind: Rule
      middlewares:
        - name: treafik-default-headers
          namespace: grafana
      services:
        - name: grafana
          port: 3000
  tls:
    options:
      name: traefik-tls-options
      namespace: grafana
    secretName: grafana-production-tls
